<resources>
    <string name="app_name">Leps_Planner</string>

    <string name="LANGUAGE_IDENTIFIER">en</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navbar_header">Ravensburg Leprechauns</string>
    <string name="navbar_subheader">www.ravensburg-leprechauns.de</string>

    <string name="drawer_title_main">Home</string>
    <string name="drawer_title_admin_create_event">New Event</string>
    <string name="drawer_title_user_settings">Profile</string>


    <string name="action_settings">Settings</string>

    <string name="nav_title_admin">Administration</string>
    <string name="nav_event_create">New Event</string>
    <string name="nav_event_edit">Edit Event</string>
    <string name="nav_users_edit">Edit Users</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="nav_about">About</string>
    <string name="nav_account">My Profile</string>
    <string name="nav_events_new">New Events</string>
    <string name="nav_events_all">All Events</string>
    <string name="nav_events_mine">My Events</string>

    <string name="login_header_reset_pw">Password Reset</string>
    <string name="login_header_login">Sign In</string>
    <string name="login_header_signup">Sign Up</string>
    <string name="login_email_hint">E-Mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Sign in</string>
    <string name="signup_button_text">Sign up</string>
    <string name="login_register_needed">Don\'t have an Account? Sign up!</string>
    <string name="login_reset_pw">Forgot your password?</string>
    <string name="login_already_registered">Already have an account? Sign in!</string>
    <string name="login_empty">No login data provided!</string>
    <string name="login_user_progress">Loggin in...</string>
    <string name="login_sign_in_failed">Failed to sign in! Check your credentials.</string>
    <string name="login_sign_up_failed">Failed to sign up! Check your credentials.</string>

    <string name="usettings_lbl_mail">E-mail:</string>
    <string name="usettings_txt_mail">Your e-mail</string>
    <string name="usettings_lbl_name">Name:</string>
    <string name="usettings_txt_name">Your name</string>
    <string name="usettings_lbl_number">Shirt number</string>
    <string name="usettings_txt_number">Your shirt number</string>
    <string name="usettings_lbl_role">Role:</string>
    <string name="usettings_lbl_group">Group:</string>

    <string name="usettings_group_general">General</string>
    <string name="usettings_group_team">Team</string>
    <string name="usettings_group_youth">Youth</string>

    <string name="usettings_role_user">User</string>
    <string name="usettings_role_admin">Administrator</string>

    <string name="type_game_home">Game - Home</string>
    <string name="type_game_away">Game - Away</string>
    <string name="type_other">Other</string>

    <string name="adm_ce_lbl_title">Title:</string>
    <string name="adm_ce_lbl_description">Description:</string>
    <string name="adm_ce_lbl_date">Date:</string>
    <string name="adm_ce_lbl_time">Time:</string>
    <string name="adm_ce_lbl_group">Group:</string>
    <string name="adm_ce_lbl_type">Type</string>
    <string name="adm_ce_lbl_location">Location:</string>
    <string name="adm_ce_cmd_save">Save Event</string>

    <string name="msg_saved_changes">Changes have been saved!</string>
    <string name="msg_success_password_reset">A reset-email has been sent to you!</string>
    <string name="msg_failure_password_reset">A failure occured while sending the confirmation!</string>

    <string name="button_save">Save</string>
    <string name="reset_pw_button_text">Reset your password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
