<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events_new"
            android:icon="@drawable/ic_fiber_new_black_24dp"
            android:title="@string/nav_events_new" />
        <item
            android:id="@+id/nav_events_all"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/nav_events_all" />
        <item
            android:id="@+id/nav_events_mine"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/nav_events_mine" />
    </group>

    <item android:title="@string/nav_title_settings">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/nav_sign_out" />
        </menu>
    </item>

</menu>
