<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jurtz.marcel.leps_planner.Login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="50dp">

        <TextView
            style="@style/leps_header"
            android:text="@string/login_header_login"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/pbLogin"
            android:indeterminate="true"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/txtLoginEmail"
            style="@style/leps_input"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtLoginPassword"
            style="@style/leps_input"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />

        <Button
            style="@style/leps_button_fullwidth"
            android:id="@+id/cmdPerformLogin"
            android:hint="@string/login_button_text"/>

        <TextView
            style="@style/leps_textview"
            android:layout_marginTop="@dimen/padding_large"
            android:id="@+id/lblLogin"
            android:text="@string/login_register_needed"/>

        <TextView
            style="@style/leps_textview"
            android:layout_marginTop="25dp"
            android:id="@+id/lblForgotPassword"
            android:text="@string/login_reset_pw"/>

    </LinearLayout>
</RelativeLayout>
