<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.jurtz.marcel.leps_planner.Fragments.FragUserSettings">

    <!-- E-Mail -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblSettingsMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/usettings_lbl_mail"/>

        <EditText
            android:id="@+id/txtSettingsMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/usettings_txt_mail"/>

    </LinearLayout>

    <!-- Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblSettingsName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/usettings_lbl_name"/>

        <EditText
            android:id="@+id/txtSettingsName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:hint="@string/usettings_txt_name"/>

    </LinearLayout>

    <!-- Shirt Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblSettingsNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/usettings_lbl_number"/>

        <EditText
            android:id="@+id/txtSettingsNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="number"
            android:hint="@string/usettings_txt_number"/>

    </LinearLayout>

    <!-- Group -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblSettingsGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/usettings_lbl_group"/>

        <EditText
            android:id="@+id/txtSettingsGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/usettings_group_team"
            android:inputType="none" />

    </LinearLayout>

    <!-- Role -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblSettingsRole"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/usettings_lbl_role"/>

        <EditText
            android:id="@+id/txtSettingsRole"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="none" />

    </LinearLayout>

    <Button
        android:id="@+id/cmdSaveUserSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"/>

</LinearLayout>
