<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jurtz.marcel.leps_planner.Login.SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_margin="50dp">

                <TextView
                    style="@style/leps_header"
                    android:text="@string/login_header_signup"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:id="@+id/pbSignUp"
                    android:indeterminate="true"
                    android:visibility="invisible"/>

                <EditText
                    android:id="@+id/txtSignUpEmail"
                    style="@style/leps_input"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress" />

                <EditText
                    style="@style/leps_input_password"
                    android:id="@+id/txtSignUpPassword"
                    android:hint="@string/login_password_hint" />

                <Button
                    style="@style/leps_button_fullwidth"
                    android:id="@+id/cmdPerformSignUp"
                    android:hint="@string/signup_button_text"/>

                <TextView
                    style="@style/leps_textview"
                    android:layout_marginTop="25dp"
                    android:id="@+id/lblSignUp"
                    android:text="@string/login_already_registered"/>

        </LinearLayout>
</RelativeLayout>
