<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.jurtz.marcel.leps_planner.Fragments.FragAdminEventNew">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_ce_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_regular"
                    android:text="@string/adm_ce_lbl_title"/>

                <EditText
                    android:id="@+id/txt_ce_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_regular"/>


            </LinearLayout>

            <!-- Type -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_ce_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_regular"
                    android:text="@string/adm_ce_lbl_type"/>

                <Spinner
                    android:id="@+id/sp_ce_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_regular">

                </Spinner>

            </LinearLayout>

            <!-- Description -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_ce_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_regular"
                    android:text="@string/adm_ce_lbl_description"/>

                <EditText
                    android:id="@+id/txt_ce_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_regular"/>

            </LinearLayout>

            <!-- Group -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_ce_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_regular"
                    android:text="@string/adm_ce_lbl_group"/>

                <Spinner
                    android:id="@+id/sp_ce_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_regular">

                </Spinner>

            </LinearLayout>

            <!-- Date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_datetime"
                android:layout_marginBottom="@dimen/margin_datetime">

                <TextView
                    android:id="@+id/lbl_ce_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_regular"
                    android:text="@string/adm_ce_lbl_date"/>

                <TextView
                    android:id="@+id/lbl_ce_selected_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/margin_datetime"
                    android:textSize="@dimen/fontsize_regular"
                    android:text="01.12.2017"/>

            </LinearLayout>

            <!-- Time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_datetime"
                android:layout_marginBottom="@dimen/margin_datetime">

                <TextView
                    android:id="@+id/lbl_ce_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_regular"
                    android:text="@string/adm_ce_lbl_time"/>

                <TextView
                    android:id="@+id/lbl_ce_selected_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/margin_datetime"
                    android:textSize="@dimen/fontsize_regular"
                    android:text="15:00"/>

            </LinearLayout>

            <!-- Location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_ce_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="2"
                    android:textSize="@dimen/fontsize_regular"
                    android:text="@string/adm_ce_lbl_location"/>

                <EditText
                    android:id="@+id/txt_ce_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_regular"/>

            </LinearLayout>

            <Button
                android:id="@+id/cmdSaveNewEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontsize_regular"
                android:text="@string/adm_ce_cmd_save"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
